--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,10 @@
         body { background: #f7f7f7; }
         .container { margin-top: 40px; }
         .logout { float: right; }
+        /* Prevent Chinese text from breaking per character */
+        .lead {
+            word-break: keep-all;
+        }
     </style>
 </head>
 <body>
