--- a/templates/profile.html
+++ b/templates/profile.html
@@ -23,6 +23,7 @@
           <a class="btn btn-outline-dark btn-sm me-2" href="{{ url_for('appointments') }}">預約看診</a>
           <a class="btn btn-outline-primary btn-sm me-2" href="{{ url_for('exercise') }}">運動記錄</a>
           <a class="btn btn-outline-danger btn-sm me-2" href="{{ url_for('diet') }}">飲食記錄</a>
+          <a class="btn btn-outline-info btn-sm me-2" href="{{ url_for('mood') }}">心情紀錄</a>
           <a class="btn btn-outline-danger btn-sm" href="{{ url_for('logout') }}">登出</a>
         </div>
       </div>
